修改文件: _posts/2020-06-23-spring-核心思想.md

--- a/_posts/2020-06-23-spring-核心思想.md
+++ b/_posts/2020-06-23-spring-核心思想.md
@@ -8,7 +8,7 @@ tags: spring
 
 # 核心思想
 
-### 第一节IoC
+### 第1节 IoC
 
  
 
@@ -16,7 +16,35 @@ tags: spring
 
 IoC控制反转，控制指的是对象创建(管理)的权利，反转指控制权交给Spring框架、IoC容器。使用对象时，不用自己new对象，而是由Spring实例化并管理对象，找Spring要就可以。
 
-![理解什么是IoC](./images/理解什么是IoC.png)
+![理解什么是IoC](assets/images/ioc_aop/理解什么是IoC.png)
 
 **1.2 IoC解决什么问题**
+解决对象之间的耦合】
+
 ![IoC解决对象耦合问题](./images/IoC解决对象耦合问题.png)
+
+**1.3 IoC和DI的区别**
+DI：依赖注入
+IoC和DI描述的是同一件事(对象实例化及依赖关系维护这件事)，角度不同(IoC站在对象角度，DI站在容器角度)。
+DI概念出现在IoC之后，应该和后来容器火起来有关。
+
+![IoC和DI的区别](./images/IoC和DI的区别.png)
+
+
+### 第2节 AOP
+
+**2.1 什么是AOP**
+AOP面向切面编程，OOP的延续，OOP三大特征：封装、继承和多态。
+横切逻辑代码存在重复、会与业务逻辑代码糅合在一起的问题。
+
+![OOP垂直纵向继承体系](./images/OOP纵向继承体系_1.png)
+
+![AOP解决横切逻辑代码](./images/横切逻辑代码.png)
+
+![AOP横切代码分离](./images/横切代码分离.png)
+**2.2 解决什么问题**
+在不改变业务逻辑情部下，增强横切逻辑代码，根本上解耦合，避免横切逻辑代码的问题。
+**2.2 为什么叫做面向切面编程**
+『切』：横切逻辑，原有业务逻辑不能动，只能操作横切逻辑代码，所以面向横切逻辑。
+
+『面』：横切逻辑代码往往要影响很多方法，每个方法像一个点，多个点构成面，出现面的概念。
